--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="O'Connor Brothers Welding Chebanse" />
   <meta name="description" content="O'Connor Brothers Welding Chebanse" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
   <title>O'Connor Brothers Welding</title>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -25,7 +25,7 @@
 <body class="sub_page">
   <div class="hero_area">
     <div class="hero_bg_box">
-      <img src="images/hero-bg.jpg" alt="">
+      <img src="Images/hero-bg.jpg" alt="">
     </div>
     <header class="header_section">
       <div class="header_top">
@@ -98,7 +98,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t1.jpg" alt="">
+              <img src="Images/t1.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -113,7 +113,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t2.jpg" alt="">
+              <img src="Images/t2.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -128,7 +128,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t3.jpg" alt="">
+              <img src="Images/t3.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
