--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="O'Connor Brothers Welding Chebanse" />
   <meta name="description" content="O'Connor Brothers Welding Chebanse" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
   <title>O'Connor Brothers Welding</title>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -25,7 +25,7 @@
 <body class="sub_page">
   <div class="hero_area">
     <div class="hero_bg_box">
-      <img src="images/hero-bg.jpg" alt="">
+      <img src="Images/hero-bg.jpg" alt="">
     </div>
 <header class="header_section">
       <div class="header_top">
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="img-box ">
-            <img src="images/about-img.jpg" class="box_img" alt="about img">
+            <img src="Images/about-img.jpg" class="box_img" alt="about img">
           </div>
         </div>
       </div>
