--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="O'Connor Brothers Welding Chebanse" />
   <meta name="description" content="O'Connor Brothers Welding Chebanse" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
   <title>O'Connor Brothers Welding</title>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -25,7 +25,7 @@
 <body class="sub_page">
   <div class="hero_area">
     <div class="hero_bg_box">
-      <img src="images/hero-bg.jpg" alt="">
+      <img src="Images/hero-bg.jpg" alt="">
     </div>
     <header class="header_section">
       <div class="header_top">
@@ -100,7 +100,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s1.png" alt="" />
+                  <img src="Images/s1.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -112,7 +112,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s4.png" alt="" />
+                  <img src="Images/s4.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -124,7 +124,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s6.png" alt="" />
+                  <img src="Images/s6.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -136,7 +136,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s1.png" alt="" />
+                  <img src="Images/s1.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -148,7 +148,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s4.png" alt="" />
+                  <img src="Images/s4.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -160,7 +160,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s3.png" alt="" />
+                  <img src="Images/s3.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
