--- a/index.html
+++ b/index.html
@@ -300,33 +300,33 @@
   <section class="fix"  >
 <div id="wowslider-container1">
 <div class="ws_Images"><ul>
-        <li><img src="data1/Images/shop.jpg" alt="Shop" title="Shop" id="wows1_0"/></li>
-        <li><img src="data1/Images/stainless_pipe.jpg" alt="Stainless Pipe" title="Stainless Pipe" id="wows1_1"/></li>
-        <li><img src="data1/Images/stainless_pipe1.jpg" alt="Stainless Pipe1" title="Stainless Pipe1" id="wows1_2"/></li>
-        <li><img src="data1/Images/stone_box.jpg" alt="Stone Box" title="Stone Box" id="wows1_3"/></li>
-        <li><img src="data1/Images/tank_rebuild.jpg" alt="Tank Rebuild" title="Tank Rebuild" id="wows1_4"/></li>
-        <li><img src="data1/Images/tanks.jpg" alt="Tanks" title="Tanks" id="wows1_5"/></li>
-        <li><img src="data1/Images/terr.jpg" alt="terr" title="terr" id="wows1_6"/></li>
-        <li><img src="data1/Images/terragator.jpg" alt="Terragator" title="Terragator" id="wows1_7"/></li>
-        <li><img src="data1/Images/tow_truck_bed.jpg" alt="Tow Truck Bed" title="Tow Truck Bed" id="wows1_8"/></li>
-        <li><img src="data1/Images/truckhitch2.jpg" alt="truck-hitch2" title="truck-hitch2" id="wows1_9"/></li>
-        <li><img src="data1/Images/5th_wheel_plate.jpg" alt="5th Wheel Plate" title="5th Wheel Plate" id="wows1_10"/></li>
-        <li><img src="data1/Images/auger_shield.jpg" alt="Auger Shield" title="Auger Shield" id="wows1_11"/></li>
-        <li><img src="data1/Images/blade.jpg" alt="Blade" title="Blade" id="wows1_12"/></li>
-        <li><img src="data1/Images/bucket.jpg" alt="Bucket" title="Bucket" id="wows1_13"/></li>
-        <li><img src="data1/Images/bucket1.jpg" alt="Bucket1" title="Bucket1" id="wows1_14"/></li>
-        <li><img src="data1/Images/dad.jpg" alt="Dad" title="Dad" id="wows1_15"/></li>
-        <li><img src="data1/Images/dump_seal.jpg" alt="Dump Seal" title="Dump Seal" id="wows1_16"/></li>
-        <li><img src="data1/Images/dump_trailer.jpg" alt="Dump Trailer" title="Dump Trailer" id="wows1_17"/></li>
-        <li><img src="data1/Images/flatbed.jpg" alt="Flatbed" title="Flatbed" id="wows1_18"/></li>
-        <li><img src="data1/Images/flatbed1.jpg" alt="Flatbed1" title="Flatbed1" id="wows1_19"/></li>
-        <li><img src="data1/Images/frog.jpg" alt="Frog" title="Frog" id="wows1_20"/></li>
-        <li><img src="data1/Images/hard_facing_2.jpg" alt="Hard Facing 2" title="Hard Facing 2" id="wows1_21"/></li>
-        <li><img src="data1/Images/hard_facing.jpg" alt="Hard Facing" title="Hard Facing" id="wows1_22"/></li>
-        <li><img src="data1/Images/hinge.jpg" alt="Hinge" title="Hinge" id="wows1_23"/></li>
-        <li><img src="data1/Images/momdadi.jpg" alt="MOMDAD&I" title="MOMDAD&I" id="wows1_24"/></li>
-        <li><a href="http://wowslider.net"><img src="data1/Images/pipe.jpg" alt="image carousel" title="Pipe" id="wows1_25"/></a></li>
-        <li><img src="data1/Images/for_sale.jpg" alt="For Sale" title="For Sale" id="wows1_26"/></li>
+        <li><img src="data1/images/shop.jpg" alt="Shop" title="Shop" id="wows1_0"/></li>
+        <li><img src="data1/images/stainless_pipe.jpg" alt="Stainless Pipe" title="Stainless Pipe" id="wows1_1"/></li>
+        <li><img src="data1/images/stainless_pipe1.jpg" alt="Stainless Pipe1" title="Stainless Pipe1" id="wows1_2"/></li>
+        <li><img src="data1/images/stone_box.jpg" alt="Stone Box" title="Stone Box" id="wows1_3"/></li>
+        <li><img src="data1/images/tank_rebuild.jpg" alt="Tank Rebuild" title="Tank Rebuild" id="wows1_4"/></li>
+        <li><img src="data1/images/tanks.jpg" alt="Tanks" title="Tanks" id="wows1_5"/></li>
+        <li><img src="data1/images/terr.jpg" alt="terr" title="terr" id="wows1_6"/></li>
+        <li><img src="data1/images/terragator.jpg" alt="Terragator" title="Terragator" id="wows1_7"/></li>
+        <li><img src="data1/images/tow_truck_bed.jpg" alt="Tow Truck Bed" title="Tow Truck Bed" id="wows1_8"/></li>
+        <li><img src="data1/images/truckhitch2.jpg" alt="truck-hitch2" title="truck-hitch2" id="wows1_9"/></li>
+        <li><img src="data1/images/5th_wheel_plate.jpg" alt="5th Wheel Plate" title="5th Wheel Plate" id="wows1_10"/></li>
+        <li><img src="data1/images/auger_shield.jpg" alt="Auger Shield" title="Auger Shield" id="wows1_11"/></li>
+        <li><img src="data1/images/blade.jpg" alt="Blade" title="Blade" id="wows1_12"/></li>
+        <li><img src="data1/images/bucket.jpg" alt="Bucket" title="Bucket" id="wows1_13"/></li>
+        <li><img src="data1/images/bucket1.jpg" alt="Bucket1" title="Bucket1" id="wows1_14"/></li>
+        <li><img src="data1/images/dad.jpg" alt="Dad" title="Dad" id="wows1_15"/></li>
+        <li><img src="data1/images/dump_seal.jpg" alt="Dump Seal" title="Dump Seal" id="wows1_16"/></li>
+        <li><img src="data1/images/dump_trailer.jpg" alt="Dump Trailer" title="Dump Trailer" id="wows1_17"/></li>
+        <li><img src="data1/images/flatbed.jpg" alt="Flatbed" title="Flatbed" id="wows1_18"/></li>
+        <li><img src="data1/images/flatbed1.jpg" alt="Flatbed1" title="Flatbed1" id="wows1_19"/></li>
+        <li><img src="data1/images/frog.jpg" alt="Frog" title="Frog" id="wows1_20"/></li>
+        <li><img src="data1/images/hard_facing_2.jpg" alt="Hard Facing 2" title="Hard Facing 2" id="wows1_21"/></li>
+        <li><img src="data1/images/hard_facing.jpg" alt="Hard Facing" title="Hard Facing" id="wows1_22"/></li>
+        <li><img src="data1/images/hinge.jpg" alt="Hinge" title="Hinge" id="wows1_23"/></li>
+        <li><img src="data1/images/momdadi.jpg" alt="MOMDAD&I" title="MOMDAD&I" id="wows1_24"/></li>
+        <li><a href="http://wowslider.net"><img src="data1/images/pipe.jpg" alt="image carousel" title="Pipe" id="wows1_25"/></a></li>
+        <li><img src="data1/images/for_sale.jpg" alt="For Sale" title="For Sale" id="wows1_26"/></li>
     </ul></div>
     <div class="ws_bullets"><div>
         <a href="#" title="Shop"><span><img src="data1/tooltips/shop.jpg" alt="Shop"/>1</span></a>
