--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   
   <section class="fix"  >
 <div id="wowslider-container1">
-<div class="ws_Images"><ul>
+<div class="ws_images"><ul>
         <li><img src="data1/images/shop.jpg" alt="Shop" title="Shop" id="wows1_0"/></li>
         <li><img src="data1/images/stainless_pipe.jpg" alt="Stainless Pipe" title="Stainless Pipe" id="wows1_1"/></li>
         <li><img src="data1/images/stainless_pipe1.jpg" alt="Stainless Pipe1" title="Stainless Pipe1" id="wows1_2"/></li>
