--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <li><img src="data1/images/hard_facing.jpg" alt="Hard Facing" title="Hard Facing" id="wows1_22"/></li>
         <li><img src="data1/images/hinge.jpg" alt="Hinge" title="Hinge" id="wows1_23"/></li>
         <li><img src="data1/images/momdadi.jpg" alt="MOMDAD&I" title="MOMDAD&I" id="wows1_24"/></li>
-        <li><a href="http://wowslider.net"><img src="data1/images/pipe.jpg" alt="image carousel" title="Pipe" id="wows1_25"/></a></li>
+        <li><img src="data1/images/pipe.jpg" alt="image carousel" title="Pipe" id="wows1_25"/></a></li>
         <li><img src="data1/images/for_sale.jpg" alt="For Sale" title="For Sale" id="wows1_26"/></li>
     </ul></div>
     <div class="ws_bullets"><div>
